Complete a rough first draft.
This `Nextflow` script will now take `cellranger count` outputs and
generate `AnnData` and `Seurat` objects. They are annotated with
various QC statistics as well as gene types. The pipeline also generates
plots of the QC statistics, while generating an `HTML` document that
summarizes the pipeline's outputs. This `HTML` summary is incomplete at
the moment and likely to change a lot as the outputs are organized.

--- a/assets/annotation_info/html_templates/summary_template.html
+++ b/assets/annotation_info/html_templates/summary_template.html
@@ -42,7 +42,7 @@
                 </p>
             </div>
             <div class="col-md-8">
-                <img class="img-fluid" src="{{ flowchart_path }}"/>
+                <img class="img-fluid" src="{{ flowchart }}"/>
             </div>
         </div>
     </div>
