--- a/assets/summaries/html_templates/summary_template.html
+++ b/assets/summaries/html_templates/summary_template.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pipeline Summary</title>
+    <title>{{ title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 </head>
@@ -23,7 +23,7 @@
             </div>
         </div>
     </nav>
-    <h1 class="text-center mb-5 display-1">Pipeline Summary</h1>
+    <h1 class="text-center mb-5 display-1">{{ title }}</h1>
     <div class="container" id="Overview">
         <div class="row">
             <div class="col-md">
@@ -42,7 +42,7 @@
                 </p>
             </div>
             <div class="col-md-8">
-                <img class="img-fluid" src="{{ flowchart }}"/>
+                <img class="img-fluid" src="{{ flowchart }}" />
             </div>
         </div>
     </div>
@@ -51,7 +51,7 @@
         {% for i in range(0, (plot_paths|length) - 1, 2) %}
         <div class="row">
             <div class="col-md">
-                <img class="img-fluid" src="{{ plot_paths[i] }}"/>
+                <img class="img-fluid" src="{{ plot_paths[i] }}" />
             </div>
             <div class="col-md">
                 <img class="img-fluid" src="{{ plot_paths[i+1] }}">
@@ -61,26 +61,32 @@
     </div>
     <h2 class="text-center mb-5 display-2">Outputs</h2>
     <div class="container" id="Outputs">
+        {% for i in range(0, (dir_trees|length) - 1, 2) %}
         <div class="row">
             <div class="col-md">
-                <code><pre>{{ dir_tree }}</pre></code>
+                <code><pre>{{ dir_trees[i] }}</pre></code>
             </div>
+            <div class="col-md">
+                <code><pre>{{ dir_trees[i+1] }}</pre></code>
         </div>
+        {% endfor %}
     </div>
     <h2 class="text-center mb-5 display-2">Annotation Strategy</h2>
     <div class="container" id="Annotation_Strategy">
         <p class="fs-5">
             For both mice and humans, the following heuristics were used for each gene type:
-            <ul class="list-group">
-                {% for gene_type in annotation_descriptions %}
-                <li class="list-group-item d-flex justify-content-between align-items-start">
-                    <div class="ms-2 me-auto">
-                        <div class="fw-bold">{{ gene_type['name'] }}</div>
-                        {{ gene_type['description'] }}
-                    </div>
-                </li>
-                {% endfor %}
-            </ul>
+        <ul class="list-group">
+            {% for gene_type in annotation_descriptions %}
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                    <div class="fw-bold">{{ gene_type['name'] }}</div>
+                    {{ gene_type['description'] }}
+                </div>
+            </li>
+            {% endfor %}
+        </ul>
+        As a result, the following genes were annotated in each category:
+        {{ gene_annot_table }}
         </p>
     </div>
     <h2 class="text-center mb-5 display-2">Tools Used</h2>
@@ -95,4 +101,5 @@
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
